[metadata]
license_file = LICENSE


[bdist_wheel]
universal=1


[tool:pytest]
markers =
    network: marks tests that require network access (deselect with '-m "not network"')


[pep257]
ignore=D203


[flake8]
ignore=N806,E721,W503
exclude=*/test/*
max-complexity=13


[doc8]
max-line-length=120
verbose=1
